# KM264

./: .gitignore  CMakeLists.txt  KM264.cpp  LICENSE  README.md
Decoder/: CMakeLists.txt  decoder.cpp
Encoder/: CMakeLists.txt  configure.h  encoder.cpp
Encoder/header/: byte_string.h  byte_writer.h  common.h  configuration.h  macro_block.h  macro_block_IPCM.h  nal_unit.h  pps.h  slice.h  sps.h  yuv_reader.h
Encoder/src/: yuv_reader.cpp
